[package]
name = "lambda-ticket"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-config = "1.0.1"
aws-sdk-dynamodb = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.2"
rand_distr = "0.4.3"
rand = "0.8.5"
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.108"
